--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "mobx-rest-jquery-adapter",
-  "version": "1.0.2",
-  "description": "jQuery adapter for mobx-rest",
+  "name": "mobx-rest-axios-adapter",
+  "version": "1.0.0",
+  "description": "Axios adapter for mobx-rest",
   "repository": {
     "type": "git",
-    "url": "git@github.com:masylum/mobx-rest-jquery-adapter.git"
+    "url": "git@github.com:IranTip/mobx-rest-axios-adapter.git"
   },
   "license": "MIT",
   "jest": {
@@ -20,12 +20,15 @@
       "Class",
       "jest",
       "FormData",
-      "File"
+      "File",
+      "fail"
     ]
   },
   "dependencies": {
-    "jquery": "^3.1.1",
-    "lodash": "^4.17.4"
+    "axios": "^0.16.2",
+    "axios-mock-adapter": "^1.9.0",
+    "lodash": "^4.17.4",
+    "qs": "^6.5.1"
   },
   "devDependencies": {
     "babel-cli": "^6.10.1",
