--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
   "main": "lib",
   "scripts": {
     "compile": "./node_modules/.bin/babel src --out-dir lib",
-    "prepublish": "npm run compile",
+    "prepare": "npm run compile",
     "jest": "BABEL_ENV=test NODE_PATH=src jest --no-cache",
     "lint": "standard --verbose | snazzy",
     "flow": "flow",
